--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="ac">
             <h2 itemprop="name">Lan Nails Spa Duncan</h2>
             <div class="breakcrumb">
-                <a itemprop="url" href="https://maps.app.goo.gl/KJcmSTotN8d1XeUZ8" title="Lan Nails Spa Duncan">Home</a>/<p>About us</p>
+                <a itemprop="url" href="https://maps.app.goo.gl/KJcmSTotN8d1XeUZ8" title="Lan Nails Spa Duncan">Home</a>/<p>Hiring</p>
             </div>
         </div>
     </div>
@@ -234,7 +234,13 @@
         <div class="contact-footer center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>ABOUT US</h2><p>Come here with us, you can choose from a wide range of services such as Manicure, Pedicure, more together with a large selection of high quality products for you to choose. No matter what services you choose, our professional and well-trained licensed technicians will bring you the most satisfaction ever.</p><p>We Accepted Visa, Master Card, Debit Card, No Check Accepted</p><p>Thanks you for you coming!</p><p></p></div></div><div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>Follow Us In Facebook:</h2><div class="follow-us">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>HIRING</h2><p>We want to hire pedicure, manicure technician. 
+Experience in working in a nail salon. 
+Professional environment. Friendly co-workers.
+Training for 2 weeks is provided. Paid by working hours or profit sharing.</p><p>Phone: (778) 422-3749
+Mobile Phone: 250-891-3749
+or drop your resume in: Unit A, 225 Canada Avenue, Duncan
+Please come & join our professional team!d</p><p>Thanks you!</p><p></p></div></div><div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>Follow Us In Facebook:</h2><div class="follow-us">
     <div class="clearfix">
         <ul class="social_icon">
             <li class="social-icons">
