--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
         <div class="contact-footer center">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>HIRING</h2><p>We want to hire pedicure, manicure technician. 
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>HIRING</h2><p>URGENT !!! We want to hire pedicure, manicure technician. 
 Experience in working in a nail salon. 
 Professional environment. Friendly co-workers.
 Training for 2 weeks is provided. Paid by working hours or profit sharing.</p><p>Phone: (778) 422-3749
-Mobile Phone: 250-891-3749
+Mobile Phone: 250-891-3749. Email: lannailspa@gmail.com. 
 or drop your resume in: Unit A, 225 Canada Avenue, Duncan
 Please come & join our professional team!d</p><p>Thanks you!</p><p></p></div></div><div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><div class="footer-3-box"><h2>Follow Us In Facebook:</h2><div class="follow-us">
     <div class="clearfix">
